# bitbucket2

./: .gitignore  .gitmodules  CHANGES.txt  Makefile  README.md  dots.code-workspace  holamundo3
docker/: Dockerfile.controller  Dockerfile.rosdevel  Dockerfile.stub  docker-compose.controller.yaml  docker-compose.controller5.yaml  docker-compose.yaml
docker/scripts/: coder.json  generate_carriers.py  killros  random_carriers.py  settings.json  start_controller  start_simulator  startup.sh
src/dots_controllers/dots_example_controller/: package.xml  setup.cfg  setup.py
src/dots_controllers/dots_example_controller/dots_example_controller/: RW_bias.py  carry.py  explore.py
src/dots_controllers/dots_example_controller/launch/: RW_bias.launch.py  basic.launch.py  controller.launch.py  explore.launch.py  run_1_carry.launch.py  run_2_RW_bias.launch.py  run_2_explore.launch.py  run_6_explore.launch.py
src/dots_support/bagparse/: package.xml  setup.cfg  setup.py
src/dots_support/bagparse/bagparse/: convert.py
src/dots_support/dots_interfaces/: CMakeLists.txt  package.xml
src/dots_support/dots_interfaces/msg/: Tag.msg  TagArray.msg
src/dots_support/dots_tf_tools/: CMakeLists.txt  package.xml
src/dots_support/dots_tf_tools/src/: tf2_relay.cpp
src/dots_support/dots_vision/: CMakeLists.txt  package.xml
src/dots_support/dots_vision/include/dots_vision/: dictionary.hpp  vision.hpp
src/dots_support/dots_vision/params/: mm49_out.yml  mm_out.yml
src/dots_support/dots_vision/src/: vision.cpp
src/dots_support/urdf_prefix/: package.xml  setup.cfg  setup.py
src/dots_support/urdf_prefix/urdf_prefix/: urdf_prefix.py
