<?xml version="1.0"?>
<package format="2">
  <name>dots_example_controller</name>
  <version>0.0.0</version>
  <description>Minimal controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="simon2.jones@bristol.ac.uk">Simon Jones</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <depend>rclpy</depend>
  <depend>std_msgs</depend> 
  <depend>robot_localization</depend> 
  <depend>dots_sim_support</depend> 
  <depend>dots_interfaces</depend> 
        
  <!-- <depend>joy</depend> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_python</build_type>
  </export>
</package>
