<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dots_vision</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="simonj23@gmail.com">simonj</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>tf2</depend>
  <depend>dots_interfaces</depend>

  <!-- <depend>nav_msgs</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
